// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table component renders 1`] = `
@media  {
  .c-cwQMhQ {
    border-collapse: separate;
    border-spacing: 0;
    font-family: var(--fonts-sans);
    font-size: var(--fontSizes-sm);
    width: 100%;
  }

  .c-hjAYDb {
    background: unset;
  }

  .c-jhJxGZ {
    color: white;
    font-family: var(--fonts-body);
    font-weight: 600;
    line-height: 1.5;
    text-align: left;
    vertical-align: middle;
  }

  .c-hegdBP {
    border-bottom: 1px solid var(--colors-grey200);
    box-sizing: border-box;
    color: var(--colors-grey800);
    font-family: var(--fonts-body);
    line-height: 1.5;
    text-align: left;
    vertical-align: middle;
  }

  .c-hegdBP:first-child {
    font-weight: 600;
  }
}

@media  {
  .c-cwQMhQ-ljrFRn-size-md .c-hegdBP,
  .c-cwQMhQ-ljrFRn-size-md .c-jhJxGZ,
  .c-cwQMhQ-ljrFRn-size-md .c-egnNtq {
    height: var(--sizes-4);
    padding: var(--space-1) var(--space-3);
  }

  .c-cwQMhQ-jDnPZD-corners-round .c-jhJxGZ:first-of-type {
    border-top-left-radius: var(--radii-0);
  }

  .c-cwQMhQ-jDnPZD-corners-round .c-jhJxGZ:last-of-type {
    border-top-right-radius: var(--radii-0);
  }

  .c-cwQMhQ-jDnPZD-corners-round .c-hjAYDb:last-child .c-hegdBP:first-child {
    border-bottom-left-radius: var(--radii-0);
  }

  .c-cwQMhQ-jDnPZD-corners-round .c-hjAYDb:last-child .c-hegdBP:last-child {
    border-bottom-right-radius: var(--radii-0);
  }

  .c-PJLV-jLmlfq-theme-primaryDark .c-jhJxGZ {
    background: var(--colors-primary1000);
  }

  .c-PJLV-duISxx-striped-true .c-hjAYDb:nth-child(odd) {
    background: white;
  }

  .c-PJLV-duISxx-striped-true .c-hjAYDb:nth-child(even) {
    background: var(--colors-grey100);
  }
}

@media  {
  .c-cwQMhQ-icnGIKd-css {
    height: 100px;
    width: 400px;
  }
}

<div>
  <table
    class="c-cwQMhQ c-cwQMhQ-ljrFRn-size-md c-cwQMhQ-jDnPZD-corners-round c-cwQMhQ-icnGIKd-css"
  >
    <thead
      class="c-PJLV c-PJLV-jLmlfq-theme-primaryDark"
    >
      <tr
        class="c-hjAYDb"
      >
        <th
          class="c-jhJxGZ"
        >
          Column A
        </th>
      </tr>
    </thead>
    <tbody
      class="c-PJLV c-PJLV-duISxx-striped-true"
    >
      <tr
        class="c-hjAYDb"
      >
        <td
          class="c-hegdBP"
        >
          This is text
        </td>
      </tr>
    </tbody>
    <tfoot
      class="c-PJLV"
    >
      <tr
        class="c-hjAYDb"
      >
        <td
          class="c-hegdBP"
        >
          Footer 1
        </td>
      </tr>
    </tfoot>
  </table>
</div>
`;

exports[`Table component renders with a themed header 1`] = `
@media  {
  .c-cwQMhQ {
    border-collapse: separate;
    border-spacing: 0;
    font-family: var(--fonts-sans);
    font-size: var(--fontSizes-sm);
    width: 100%;
  }

  .c-hjAYDb {
    background: unset;
  }

  .c-jhJxGZ {
    color: white;
    font-family: var(--fonts-body);
    font-weight: 600;
    line-height: 1.5;
    text-align: left;
    vertical-align: middle;
  }

  .c-hegdBP {
    border-bottom: 1px solid var(--colors-grey200);
    box-sizing: border-box;
    color: var(--colors-grey800);
    font-family: var(--fonts-body);
    line-height: 1.5;
    text-align: left;
    vertical-align: middle;
  }

  .c-hegdBP:first-child {
    font-weight: 600;
  }
}

@media  {
  .c-cwQMhQ-ljrFRn-size-md .c-hegdBP,
  .c-cwQMhQ-ljrFRn-size-md .c-jhJxGZ,
  .c-cwQMhQ-ljrFRn-size-md .c-egnNtq {
    height: var(--sizes-4);
    padding: var(--space-1) var(--space-3);
  }

  .c-cwQMhQ-jDnPZD-corners-round .c-jhJxGZ:first-of-type {
    border-top-left-radius: var(--radii-0);
  }

  .c-cwQMhQ-jDnPZD-corners-round .c-jhJxGZ:last-of-type {
    border-top-right-radius: var(--radii-0);
  }

  .c-cwQMhQ-jDnPZD-corners-round .c-hjAYDb:last-child .c-hegdBP:first-child {
    border-bottom-left-radius: var(--radii-0);
  }

  .c-cwQMhQ-jDnPZD-corners-round .c-hjAYDb:last-child .c-hegdBP:last-child {
    border-bottom-right-radius: var(--radii-0);
  }

  .c-PJLV-jLmlfq-theme-primaryDark .c-jhJxGZ {
    background: var(--colors-primary1000);
  }

  .c-PJLV-duISxx-striped-true .c-hjAYDb:nth-child(odd) {
    background: white;
  }

  .c-PJLV-duISxx-striped-true .c-hjAYDb:nth-child(even) {
    background: var(--colors-grey100);
  }

  .c-cwQMhQ-SggYt-size-lg .c-hegdBP,
  .c-cwQMhQ-SggYt-size-lg .c-jhJxGZ,
  .c-cwQMhQ-SggYt-size-lg .c-egnNtq {
    height: var(--sizes-5);
    padding: var(--space-2) var(--space-3);
  }

  .c-PJLV-bFYmVr-theme-primary .c-jhJxGZ {
    background: var(--colors-primary800);
  }
}

@media  {
  .c-cwQMhQ-icnGIKd-css {
    height: 100px;
    width: 400px;
  }
}

<div>
  <table
    class="c-cwQMhQ c-cwQMhQ-ljrFRn-size-md c-cwQMhQ-jDnPZD-corners-round c-cwQMhQ-icnGIKd-css"
  >
    <thead
      class="c-PJLV c-PJLV-bFYmVr-theme-primary"
    >
      <tr
        class="c-hjAYDb"
      >
        <th
          class="c-jhJxGZ"
        >
          Column A
        </th>
      </tr>
    </thead>
    <tbody
      class="c-PJLV c-PJLV-duISxx-striped-true"
    >
      <tr
        class="c-hjAYDb"
      >
        <td
          class="c-hegdBP"
        >
          This is text
        </td>
      </tr>
    </tbody>
    <tfoot
      class="c-PJLV"
    >
      <tr
        class="c-hjAYDb"
      >
        <td
          class="c-hegdBP"
        >
          Footer 1
        </td>
      </tr>
    </tfoot>
  </table>
</div>
`;

exports[`Table component renders with size set to lg 1`] = `
@media  {
  .c-cwQMhQ {
    border-collapse: separate;
    border-spacing: 0;
    font-family: var(--fonts-sans);
    font-size: var(--fontSizes-sm);
    width: 100%;
  }

  .c-hjAYDb {
    background: unset;
  }

  .c-jhJxGZ {
    color: white;
    font-family: var(--fonts-body);
    font-weight: 600;
    line-height: 1.5;
    text-align: left;
    vertical-align: middle;
  }

  .c-hegdBP {
    border-bottom: 1px solid var(--colors-grey200);
    box-sizing: border-box;
    color: var(--colors-grey800);
    font-family: var(--fonts-body);
    line-height: 1.5;
    text-align: left;
    vertical-align: middle;
  }

  .c-hegdBP:first-child {
    font-weight: 600;
  }
}

@media  {
  .c-cwQMhQ-ljrFRn-size-md .c-hegdBP,
  .c-cwQMhQ-ljrFRn-size-md .c-jhJxGZ,
  .c-cwQMhQ-ljrFRn-size-md .c-egnNtq {
    height: var(--sizes-4);
    padding: var(--space-1) var(--space-3);
  }

  .c-cwQMhQ-jDnPZD-corners-round .c-jhJxGZ:first-of-type {
    border-top-left-radius: var(--radii-0);
  }

  .c-cwQMhQ-jDnPZD-corners-round .c-jhJxGZ:last-of-type {
    border-top-right-radius: var(--radii-0);
  }

  .c-cwQMhQ-jDnPZD-corners-round .c-hjAYDb:last-child .c-hegdBP:first-child {
    border-bottom-left-radius: var(--radii-0);
  }

  .c-cwQMhQ-jDnPZD-corners-round .c-hjAYDb:last-child .c-hegdBP:last-child {
    border-bottom-right-radius: var(--radii-0);
  }

  .c-PJLV-jLmlfq-theme-primaryDark .c-jhJxGZ {
    background: var(--colors-primary1000);
  }

  .c-PJLV-duISxx-striped-true .c-hjAYDb:nth-child(odd) {
    background: white;
  }

  .c-PJLV-duISxx-striped-true .c-hjAYDb:nth-child(even) {
    background: var(--colors-grey100);
  }

  .c-cwQMhQ-SggYt-size-lg .c-hegdBP,
  .c-cwQMhQ-SggYt-size-lg .c-jhJxGZ,
  .c-cwQMhQ-SggYt-size-lg .c-egnNtq {
    height: var(--sizes-5);
    padding: var(--space-2) var(--space-3);
  }
}

@media  {
  .c-cwQMhQ-icnGIKd-css {
    height: 100px;
    width: 400px;
  }
}

<div>
  <table
    class="c-cwQMhQ c-cwQMhQ-SggYt-size-lg c-cwQMhQ-jDnPZD-corners-round c-cwQMhQ-icnGIKd-css"
  >
    <thead
      class="c-PJLV c-PJLV-jLmlfq-theme-primaryDark"
    >
      <tr
        class="c-hjAYDb"
      >
        <th
          class="c-jhJxGZ"
        >
          Column A
        </th>
      </tr>
    </thead>
    <tbody
      class="c-PJLV c-PJLV-duISxx-striped-true"
    >
      <tr
        class="c-hjAYDb"
      >
        <td
          class="c-hegdBP"
        >
          This is text
        </td>
      </tr>
    </tbody>
    <tfoot
      class="c-PJLV"
    >
      <tr
        class="c-hjAYDb"
      >
        <td
          class="c-hegdBP"
        >
          Footer 1
        </td>
      </tr>
    </tfoot>
  </table>
</div>
`;

exports[`Table component renders with square corners 1`] = `
@media  {
  .c-cwQMhQ {
    border-collapse: separate;
    border-spacing: 0;
    font-family: var(--fonts-sans);
    font-size: var(--fontSizes-sm);
    width: 100%;
  }

  .c-hjAYDb {
    background: unset;
  }

  .c-jhJxGZ {
    color: white;
    font-family: var(--fonts-body);
    font-weight: 600;
    line-height: 1.5;
    text-align: left;
    vertical-align: middle;
  }

  .c-hegdBP {
    border-bottom: 1px solid var(--colors-grey200);
    box-sizing: border-box;
    color: var(--colors-grey800);
    font-family: var(--fonts-body);
    line-height: 1.5;
    text-align: left;
    vertical-align: middle;
  }

  .c-hegdBP:first-child {
    font-weight: 600;
  }
}

@media  {
  .c-cwQMhQ-ljrFRn-size-md .c-hegdBP,
  .c-cwQMhQ-ljrFRn-size-md .c-jhJxGZ,
  .c-cwQMhQ-ljrFRn-size-md .c-egnNtq {
    height: var(--sizes-4);
    padding: var(--space-1) var(--space-3);
  }

  .c-cwQMhQ-jDnPZD-corners-round .c-jhJxGZ:first-of-type {
    border-top-left-radius: var(--radii-0);
  }

  .c-cwQMhQ-jDnPZD-corners-round .c-jhJxGZ:last-of-type {
    border-top-right-radius: var(--radii-0);
  }

  .c-cwQMhQ-jDnPZD-corners-round .c-hjAYDb:last-child .c-hegdBP:first-child {
    border-bottom-left-radius: var(--radii-0);
  }

  .c-cwQMhQ-jDnPZD-corners-round .c-hjAYDb:last-child .c-hegdBP:last-child {
    border-bottom-right-radius: var(--radii-0);
  }

  .c-PJLV-jLmlfq-theme-primaryDark .c-jhJxGZ {
    background: var(--colors-primary1000);
  }

  .c-PJLV-duISxx-striped-true .c-hjAYDb:nth-child(odd) {
    background: white;
  }

  .c-PJLV-duISxx-striped-true .c-hjAYDb:nth-child(even) {
    background: var(--colors-grey100);
  }

  .c-cwQMhQ-SggYt-size-lg .c-hegdBP,
  .c-cwQMhQ-SggYt-size-lg .c-jhJxGZ,
  .c-cwQMhQ-SggYt-size-lg .c-egnNtq {
    height: var(--sizes-5);
    padding: var(--space-2) var(--space-3);
  }
}

@media  {
  .c-cwQMhQ-icnGIKd-css {
    height: 100px;
    width: 400px;
  }
}

<div>
  <table
    class="c-cwQMhQ c-cwQMhQ-ljrFRn-size-md c-cwQMhQ-icnGIKd-css"
  >
    <thead
      class="c-PJLV c-PJLV-jLmlfq-theme-primaryDark"
    >
      <tr
        class="c-hjAYDb"
      >
        <th
          class="c-jhJxGZ"
        >
          Column A
        </th>
      </tr>
    </thead>
    <tbody
      class="c-PJLV c-PJLV-duISxx-striped-true"
    >
      <tr
        class="c-hjAYDb"
      >
        <td
          class="c-hegdBP"
        >
          This is text
        </td>
      </tr>
    </tbody>
    <tfoot
      class="c-PJLV"
    >
      <tr
        class="c-hjAYDb"
      >
        <td
          class="c-hegdBP"
        >
          Footer 1
        </td>
      </tr>
    </tfoot>
  </table>
</div>
`;

exports[`Table component renders with sticky columns 1`] = `
@media  {
  .c-cwQMhQ {
    border-collapse: separate;
    border-spacing: 0;
    font-family: var(--fonts-sans);
    font-size: var(--fontSizes-sm);
    width: 100%;
  }

  .c-hjAYDb {
    background: unset;
  }

  .c-jhJxGZ {
    color: white;
    font-family: var(--fonts-body);
    font-weight: 600;
    line-height: 1.5;
    text-align: left;
    vertical-align: middle;
  }

  .c-hegdBP {
    border-bottom: 1px solid var(--colors-grey200);
    box-sizing: border-box;
    color: var(--colors-grey800);
    font-family: var(--fonts-body);
    line-height: 1.5;
    text-align: left;
    vertical-align: middle;
  }

  .c-hegdBP:first-child {
    font-weight: 600;
  }
}

@media  {
  .c-cwQMhQ-ljrFRn-size-md .c-hegdBP,
  .c-cwQMhQ-ljrFRn-size-md .c-jhJxGZ,
  .c-cwQMhQ-ljrFRn-size-md .c-egnNtq {
    height: var(--sizes-4);
    padding: var(--space-1) var(--space-3);
  }

  .c-cwQMhQ-jDnPZD-corners-round .c-jhJxGZ:first-of-type {
    border-top-left-radius: var(--radii-0);
  }

  .c-cwQMhQ-jDnPZD-corners-round .c-jhJxGZ:last-of-type {
    border-top-right-radius: var(--radii-0);
  }

  .c-cwQMhQ-jDnPZD-corners-round .c-hjAYDb:last-child .c-hegdBP:first-child {
    border-bottom-left-radius: var(--radii-0);
  }

  .c-cwQMhQ-jDnPZD-corners-round .c-hjAYDb:last-child .c-hegdBP:last-child {
    border-bottom-right-radius: var(--radii-0);
  }

  .c-PJLV-jLmlfq-theme-primaryDark .c-jhJxGZ {
    background: var(--colors-primary1000);
  }

  .c-PJLV-duISxx-striped-true .c-hjAYDb:nth-child(odd) {
    background: white;
  }

  .c-PJLV-duISxx-striped-true .c-hjAYDb:nth-child(even) {
    background: var(--colors-grey100);
  }

  .c-cwQMhQ-SggYt-size-lg .c-hegdBP,
  .c-cwQMhQ-SggYt-size-lg .c-jhJxGZ,
  .c-cwQMhQ-SggYt-size-lg .c-egnNtq {
    height: var(--sizes-5);
    padding: var(--space-2) var(--space-3);
  }

  .c-PJLV-bFYmVr-theme-primary .c-jhJxGZ {
    background: var(--colors-primary800);
  }
}

@media  {
  .c-cwQMhQ-icnGIKd-css {
    height: 100px;
    width: 400px;
  }

  .c-PJLV-iiXkAWq-css {
    overflow: auto;
    max-width: 100%;
  }

  .c-PJLV-iiXkAWq-css td {
    background: inherit;
  }

  .c-cwQMhQ-idVpojG-css {
    height: 100px;
    width: 300px;
  }

  .c-PJLV-igbAmsf-css {
    overflow: auto;
    max-width: 100%;
  }

  .c-PJLV-igbAmsf-css td:nth-of-type(1),
  .c-PJLV-igbAmsf-css th:nth-of-type(1) {
    position: sticky;
    left: 0px;
    min-width: 0px;
    z-index: 2;
  }

  .c-PJLV-igbAmsf-css td {
    background: inherit;
  }
}

<div>
  <div
    class="c-PJLV c-PJLV-igbAmsf-css"
    role="scrollbar"
  >
    <table
      class="c-cwQMhQ c-cwQMhQ-ljrFRn-size-md c-cwQMhQ-jDnPZD-corners-round c-cwQMhQ-idVpojG-css"
    >
      <thead
        class="c-PJLV c-PJLV-jLmlfq-theme-primaryDark"
        numberofstickycolumns="1"
      >
        <tr
          class="c-hjAYDb"
        >
          <th
            class="c-jhJxGZ"
          >
            Column A
          </th>
          <th
            class="c-jhJxGZ"
          >
            Column B
          </th>
          <th
            class="c-jhJxGZ"
          >
            Column C
          </th>
        </tr>
      </thead>
      <tbody
        class="c-PJLV c-PJLV-duISxx-striped-true"
        numberofstickycolumns="1"
      >
        <tr
          class="c-hjAYDb"
        >
          <td
            class="c-hegdBP"
          >
            This is text
          </td>
          <td
            class="c-hegdBP"
          >
            This is text
          </td>
          <td
            class="c-hegdBP"
          >
            This is text
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
